# modules_libboot

./: CMakeLists.txt  EFIDroid.ini  EFIDroidDependencies.ini  boot.c  cmdline.c  platform.c  qcdt.c  rules.mk
cksum/: crc32.c  crc32.h  zutil.h
include/lib/: boot.h
include/lib/boot/: boot_platform.h  boot_platform_common.h  list.h  qcdt.h
include_private/: elf.h
include_private/lib/boot/internal/: atags.h  boot_internal.h  bootimg.h  list.h  platform.h  qcdt.h
loaders/: android.c  efi.c  elf.c  gzip.c  qcmbn.c  zimage.c
tagloaders/: atags.c  fdt.c  qcdt.c
test/: main.c  platform.c
test/include/lib/boot/: boot_platform.h
